--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web-Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-
+        <!-- this is nav bar -->
+            <nav>
+                <div>
+                    <h3 class="logo">Sa<span>b</span>et</h3>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="">Portfolio</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><button class="common-btn">Hire Me</button></li>
+                    </ul>
+                </div>
+            </nav>
     </header>
     <main>
 
