complete banner area

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <!-- this is nav bar -->
             <nav>
                 <div>
-                    <h3 class="logo">Sa<span>b</span>et</h3>
+                     <h3 class="logo">Sa<span>b</span>et</h3>
                 </div>
                 <div>
                     <ul>
@@ -26,7 +26,22 @@
             </nav>
     </header>
     <main>
-
+        <section class="banner">
+            <div>
+                <h3 class="intro">Hi, I am</h3>
+                <h1 class="full-name">Habib Ashraf Sabet</h1>
+                <p>I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript. In a nutshell, I create websites that help organizations address business challenges and meet their needs.</p>
+                <button class="common-btn">Download CV</button> <button class="common-btn">Contact</button>
+            </div>
+            <div>
+                <img class="profile-pic" src="images/hardy.png" alt="">
+            </div>
+        </section>
+        <!-- about us section  -->
+        <section class="about-side">
+            <h3>About Me</h3>
+            <p>I am a web developer with a vast array of knowledge in many different front end and back end languages, responsive frameworks, databases, and best code practices. My objective is simply to be the best web developer that I can be and to contribute to the technology industry all that I know and can do.</p>
+        </section>
     </main>
     <footer>
         
