about me section done

--- a/index.html
+++ b/index.html
@@ -39,8 +39,26 @@
         </section>
         <!-- about us section  -->
         <section class="about-side">
-            <h3>About Me</h3>
-            <p>I am a web developer with a vast array of knowledge in many different front end and back end languages, responsive frameworks, databases, and best code practices. My objective is simply to be the best web developer that I can be and to contribute to the technology industry all that I know and can do.</p>
+            <h3 class="about-me">About Me</h3>
+            <p class="about-section">I am a web developer with a vast array of knowledge in many different front end and back end languages, responsive frameworks, databases, and best code practices. My objective is simply to be the best web developer that I can be and to contribute to the technology industry all that I know and can do.</p>
+            <div class="about-info-area">
+                <div class="about-info">
+                    <h4 class="info-title"> Name:</h4>
+                    <p class="info-description"> Sabet</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date Of Birth:</h4>
+                    <p class="info-description">28 July 1999</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Narayangonj,Bangladesh</p>
+            </div>
+        </div>
         </section>
     </main>
     <footer>
