what i do area create

--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
             </div>
         </div>
         </section>
+        <!-- what i do section  -->
+        <section>
+            <h3 class="what-i-do-title">What I Do</h3>
+            <p class="what-i-do-description">I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript. In a nutshell, I create websites that help organizations address business challenges and meet their needs.</p>
+            <div class="skills-area-box">
+                <div class="skills-area">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skills-title">Vanilla JavaScript</h3>
+                    <p class="skills-description"> "I understanding of core JavaScript concepts like variables, functions, loops, and conditionals allows you to solve complex problems with ease. I am familiar with key JavaScript frameworks and libraries, enabling you to develop interactive and dynamic web applications."</p>
+                </div>
+                <div class="skills-area">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skills-title">React</h3>
+                    <p class="skills-description">"Throughout my journey with React, I have gained invaluable experience and expertise in building dynamic and interactive user interfaces. React has provided me with a powerful toolkit for creating robust web applications that are efficient, scalable, and maintainable."</p>
+                </div>
+                <div class="skills-area">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skills-title">Node.js</h3>
+                    <p class="skills-description">"I have had experience working with Node.js, a powerful runtime environment for JavaScript that allows for server-side scripting and building scalable network applications. During my time working with Node.js, I have gained a solid understanding of its core concepts and its event-driven, non-blocking I/O model."</p>
+                </div>
+                <div class="skills-area">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skills-title">MongoDB</h3>
+                    <p class="skills-description">"My MongoDB experience spans over several years, during which I have developed a strong proficiency in working with this powerful NoSQL database. I have successfully designed and implemented MongoDB schemas, ensuring efficient data organization and retrieval."</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
