--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                 </div>
             </div>
         </section>
+        <!-- Resume section -->
+        <section>
+            <h3 class="resume-title">A Summary Of My Resume</h3>
+            
+        </section>
     </main>
     <footer>
         
