resume section Done

--- a/index.html
+++ b/index.html
@@ -90,7 +90,51 @@
         <!-- Resume section -->
         <section>
             <h3 class="resume-title">A Summary Of My Resume</h3>
-            
+            <div class="resume-area">
+                <div class="resume-half-area">
+                    <h3 class="resume-half-area-title">My Education</h3>
+                        <div class="resume-item-area">
+                            <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                            <h4 class="resume-item-university"> Oxford University / 2021 - 2022 </h4>
+                            <p class="resume-item-description">As a computer engineering graduate pursuing a master's degree, I am embarking on a journey to deepen my knowledge and expertise in the dynamic field of computer engineering.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item-area">
+                            <h3 class="resume-item-title">BSc in Computer Engineering</h3>
+                            <h4 class="resume-item-university">Harvard University / 2016 - 2020</h4>
+                            <p class="resume-item-description">Throughout my studies, I will gain a strong foundation in mathematics, physics, and computer science, which are essential for understanding the principles behind computer engineering.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item-area">
+                            <h3 class="resume-item-title">Diploma in Computer Engineering</h3>
+                            <h4 class="resume-item-university">	Cambridge University / 2012 - 2015</h4>
+                            <p class="resume-item-description">My diploma has equipped me with the ability to design, develop, and optimize computer systems, ranging from microprocessors to large-scale networks. </p>
+                        </div>
+                </div>
+                <div class="resume-half-area">
+                    <h3 class="resume-half-area-title">My Experience</h3>
+                    <div class="resume-item-area">
+                        <h3 class="resume-item-title">Sr. Font End Developer</h3>
+                        <h4 class="resume-item-university"> Apple Inc / 2022 - Current </h4>
+                        <p class="resume-item-description">As a Senior Frontend Developer at Apple, I hold a key role in shaping the user experience of some of the world's most innovative and iconic products and services..</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item-area">
+                        <h3 class="resume-item-title">Jr. Font End Developer</h3>
+                        <h4 class="resume-item-university">Dribble Inc / 2018 - 2022</h4>
+                        <p class="resume-item-description">Dribble Inc. is a renowned company in the tech industry, and as a Junior Frontend Developer, I play an integral role in shaping the digital experiences we create. </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item-area">
+                        <h3 class="resume-item-title">HTML & CSS Developer</h3>
+                        <h4 class="resume-item-university">	Adobe Inc / 2017 - 2018</h4>
+                        <p class="resume-item-description">As an HTML and CSS developer at Adobe Inc., my role involves creating and implementing the visual and interactive elements of websites and web applications.. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-center">
+                <button class="common-btn">Download CV</button>
+            </div>
         </section>
     </main>
     <footer>
