fotter section done

--- a/index.html
+++ b/index.html
@@ -138,7 +138,28 @@
         </section>
     </main>
     <footer>
-        
+        <!-- fotter section -->
+        <div class="footer-area">
+            <div class="footer-half-area">
+                <h3 class="footer-half-area-title">Lets Connect</h3>
+                <p class="footer-half-area-description">Join discussions, ask questions, and receive feedback from experts in our forums. Share your knowledge, contribute to the community, and discover new perspectives that push the boundaries of web development.</p> 
+                <div class="socail-links">
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-half-area">
+                <h3 class="footer-half-area-title">Let's Message Me</h3>
+                <form class="contact-form" action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" name="" placeholder="Your Email" id="">
+                    <textarea name="" placeholder="Write Your Message" id="" cols="30" rows="10"></textarea>
+                    <!-- <input class="common-btn" type="submit" value="Submit"> -->
+                </form>
+                <button class="common-btn">Submit</button>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
