font awesome icon added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/941f2ea0f5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -32,7 +33,7 @@
                 <h3 class="intro">Hi, I am</h3>
                 <h1 class="full-name">Habib Ashraf Sabet</h1>
                 <p>I’m a web developer. I spend my whole day, practically every day, experimenting with HTML, CSS, and JavaScript. In a nutshell, I create websites that help organizations address business challenges and meet their needs.</p>
-                <button class="common-btn">Download CV</button> <button class="common-btn">Contact</button>
+                <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button> <button class="common-btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div>
                 <img class="profile-pic" src="images/hardy.png" alt="">
@@ -134,7 +135,7 @@
                 </div>
             </div>
             <div class="btn-center">
-                <button class="common-btn">Download CV</button>
+                <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
